feat(presenter): slide creation for minimized windows during screen-sharing #1039

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -58,6 +58,10 @@ screen.share.start = Bildschirmfreigabe starten
 screen.share.suspend = Bildschirmfreigabe anhalten
 screen.share.stop = Bildschirmfreigabe beenden
 screen.share.stopped = Die Bildschirmfreigabe wurde beendet, da das Fenster oder der Bildschirm nicht mehr verf\u00fcgbar ist
+screen.share.document.create.error = Eine neue Folie der Bildschirmfreigabe konnte nicht erstellt werden
+screen.share.document.create.error.message = Bitte beachten Sie, dass minimierte Fenster nicht geteilt werden k\u00f6nnen
+screen.share.source.missing.error = Bitte \u00fcberpr\u00fcfen Sie, ob das Fenster oder der Bildschirm noch verf\u00fcgbar ist
+screen.share.source.missing.error.message = \u00AB{0}\u00BB ist minimiert oder nicht verf\u00fcgbar.
 
 quiz = Quiz
 quiz.answers = Antworten
