--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -58,6 +58,10 @@ screen.share.start = Share screen
 screen.share.suspend = Pause screen sharing
 screen.share.stop = Stop screen sharing
 screen.share.stopped = Screen Share stopped because the window or screen is no longer available
+screen.share.document.create.error = A new screen sharing slide could not be created
+screen.share.document.create.error.message = Please note that minimized windows cannot be shared
+screen.share.source.missing.error = Please check whether the window or screen is still available
+screen.share.source.missing.error.message = \u00AB{0}\u00BB is minimised or not available.
 
 quiz = Quiz
 quiz.answers = Answers
