feat: add free-text quiz and marking of correct quiz options

--- a/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_de_DE.properties
@@ -4,6 +4,7 @@ create.quiz.type = Quizstil
 create.quiz.type.multiple = Multiple choice
 create.quiz.type.single = Eine Antwort
 create.quiz.type.numeric = Numerisch
+create.quiz.type.free_text = Freitext
 create.quiz.set = Aufgabensammlung
 create.quiz.cancel.tooltip = Dialog schlie\u00dfen
 create.quiz.option.add = Neue Quizoption
@@ -16,3 +17,4 @@ create.quiz.save.tooltip = Quiz speichern und beim Editieren fortfahren
 create.quiz.save.next = Quiz speichern & Neues erstellen
 create.quiz.save.next.tooltip = Quiz speichern und nächste Frage eingeben
 create.quiz.start = Quiz stellen
+create.quiz.comment = Notizen zum Quiz
