--- a/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_en_US.properties
@@ -4,6 +4,7 @@ create.quiz.type = Quiz type
 create.quiz.type.multiple = Multiple choice
 create.quiz.type.single = Single choice
 create.quiz.type.numeric = Numeric
+create.quiz.type.free_text = Free-Text
 create.quiz.set = Task collection
 create.quiz.cancel.tooltip = Close
 create.quiz.option.add = New quiz option
@@ -16,3 +17,4 @@ create.quiz.save.tooltip = Save quiz and continue with editing
 create.quiz.save.next = Save quiz & create new one
 create.quiz.save.next.tooltip = Save the quiz and create a new question
 create.quiz.start = Start quiz
+create.quiz.comment = Notes for the quiz
