--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -69,7 +69,7 @@ menu.bookmarks.clear = Alle Lesezeichen l\u00F6schen
 menu.bookmarks.add = Aktuelle Folie als Lesezeichen
 menu.bookmarks.remove = Lesezeichen auf aktueller Folie l\u00F6schen
 menu.bookmarks.add.default = Aktuelle Folie als Lesezeichen (Standard-K\u00FCrzel)
-menu.bookmarks.previous = Zur\u00FCck zur letzten Position
+menu.bookmarks.previous = Letztes Lesezeichen anspringen
 menu.bookmarks.goto = Lesezeichen anspringen
 menu.slide.actions = Folienlinks
 menu.info.shortcuts = Tastenk\u00FCrzel
