--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -68,7 +68,7 @@ menu.bookmarks.clear = Delete all bookmarks
 menu.bookmarks.add = Bookmark current slide
 menu.bookmarks.remove = Remove bookmark current slide
 menu.bookmarks.add.default = Bookmark current slide (default shortcut)
-menu.bookmarks.previous = Go back to previous bookmark
+menu.bookmarks.previous = Go to last bookmark
 menu.bookmarks.goto = Go to bookmark
 menu.slide.actions = Slide Links
 menu.info.shortcuts = Shortcuts
