fix: stopwatch configuration

--- a/lect-presenter-swing/src/main/resources/views/stopwatch-config/stopwatch-config_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/stopwatch-config/stopwatch-config_de_DE.properties
@@ -1,4 +1,4 @@
-stopwatch.settings.stopwatch = Stoppuhr
-stopwatch.settings.timer = Timer
+stopwatch.settings.stopwatch = Stoppuhr - Startzeit der Präsentation
+stopwatch.settings.timer = Timer - Ende der Präsentation
 stopwatch.save = Übernehmen
 stopwatch.settings.setTime = Zeit Einstellen (Format: hh:mm)
