--- a/lect-presenter-swing/src/main/resources/views/stopwatch-config/stopwatch-config_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stopwatch-config/stopwatch-config_en_US.properties
@@ -1,4 +1,4 @@
-stopwatch.settings.stopwatch = Stopwatch
-stopwatch.settings.timer = Timer
+stopwatch.settings.stopwatch = Stopwatch - Start time of the presentation
+stopwatch.settings.timer = Timer - End time of the presentation
 stopwatch.save = Save
 stopwatch.settings.setTime = Configured Time (Format: hh:mm)
