fix: add error handling for unsupported screen cutting

--- a/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
@@ -1,4 +1,5 @@
 cut.recording.error = Recording could not be cut
+cut.recording.screen.error = Cutting screen recordings is currently not supported
 delete.page.error = Page could not be deleted
 insert.page.error = Page could not be inserted
 replace.page.error = Page could not be replaced
