--- a/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
@@ -1,4 +1,5 @@
 cut.recording.error = Aufzeichnung konnte nicht geschnitten werden
+cut.recording.screen.error = Das Schneiden von Bildschirmaufnahmen wird derzeit nicht unterst\u00fctzt
 delete.page.error = Seite konnte nicht entfernt werden
 insert.page.error = Seite konnte nicht eingef\u00fcgt werden
 replace.page.error = Seite konnte nicht ersetzt werden
