fix: improve error handling for missing screen recordings

--- a/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
@@ -38,6 +38,7 @@ normalize.loudness.audio.success = Lautheit wurde erfolgreich normalisiert
 normalize.loudness.audio.error = Lautheit konnte nicht normalisiert werden
 open.recording = Aufzeichnung wird geladen
 open.recording.error = Aufzeichnung konnte nicht ge\u00f6ffnet werden
+open.recording.screen.file.error = Bildschirmaufzeichnung konnte nicht gefunden werden {0}
 save.document.title = Dokument wird geschrieben
 save.document.success = Dokument wurde erfolgreich geschrieben
 save.document.error = Dokument konnte nicht gespeichert werden
