--- a/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
@@ -38,6 +38,7 @@ normalize.loudness.audio.success = Loudness was normalized successfully
 normalize.loudness.audio.error = Loudness could not be normalized
 open.recording = Recording is loading
 open.recording.error = Recording could not be opened
+open.recording.screen.file.error = Screen recording could not be found {0}
 save.document.title = Saving document
 save.document.success = Document has been successfully saved
 save.document.error = Document could not be saved
