fix: improve video player initialization and error handling

--- a/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
@@ -10,6 +10,9 @@ hide.page.notification.title = Remove Page
 hide.page.notification.text = Do you want to remove page {0} without changing the audio?
 hide.page.notification.confirm = Remove
 hide.page.notification.close = Discard
+executor.video.error = An error occurred while loading the video
+executor.video.error.init = An error occurred while initializing the video
+executor.video.error.not.found = Video not found: {0}
 export.audio = Export audio
 export.audio.error = Audio could not be exported
 import.audio.error = Audio could not be imported
@@ -38,7 +41,8 @@ normalize.loudness.audio.success = Loudness was normalized successfully
 normalize.loudness.audio.error = Loudness could not be normalized
 open.recording = Recording is loading
 open.recording.error = Recording could not be opened
-open.recording.screen.file.error = Screen recording could not be found: {0}
+open.recording.video.error = Recording is missing a video
+open.recording.video.file.error = Video not found: {0}
 save.document.title = Saving document
 save.document.success = Document has been successfully saved
 save.document.error = Document could not be saved
