fix: show error messages on missing videos referenced in recordings (#1063)
* fix: improve error handling for missing screen recordings

* fix: refactor exception handling for opening recordings

* fix: handle existing screen recordings during copy operation

* fix: improve video player initialization and error handling

--- a/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
@@ -10,6 +10,9 @@ hide.page.notification.title = Seite entfernen
 hide.page.notification.text = Wollen Sie die Seite {0} entfernen, ohne die Audiospur zu verändern?
 hide.page.notification.confirm = Entfernen
 hide.page.notification.close = Abbrechen
+executor.video.error = Beim Laden des Videos ist ein Fehler aufgetreten
+executor.video.error.init = Beim Initialisieren des Videos ist ein Fehler aufgetreten
+executor.video.error.not.found = Video nicht gefunden: {0}
 export.audio = Audio exportieren
 export.audio.error = Audio konnte nicht exportiert werden
 import.audio.error = Audio konnte nicht importiert werden
@@ -38,6 +41,8 @@ normalize.loudness.audio.success = Lautheit wurde erfolgreich normalisiert
 normalize.loudness.audio.error = Lautheit konnte nicht normalisiert werden
 open.recording = Aufzeichnung wird geladen
 open.recording.error = Aufzeichnung konnte nicht ge\u00f6ffnet werden
+open.recording.video.error = Der Aufzeichnung fehlt ein Video
+open.recording.video.file.error = Video nicht gefunden: {0}
 save.document.title = Dokument wird geschrieben
 save.document.success = Dokument wurde erfolgreich geschrieben
 save.document.error = Dokument konnte nicht gespeichert werden
