fix: quiz management by associating quizzes with documents

--- a/lect-presenter-swing/src/main/resources/views/select-quiz/select-quiz_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/select-quiz/select-quiz_de_DE.properties
@@ -3,6 +3,7 @@ select.quiz.cancel.tooltip = Dialog schlie\u00dfen
 select.quiz.delete = Quiz l\u00f6schen
 select.quiz.edit = Quiz bearbeiten
 select.quiz.question = Frage
+select.quiz.document = Dokument
 select.quiz.type = Quizstil
 select.quiz.create = Quiz erstellen
 select.quiz.start = Quiz stellen
