--- a/lect-presenter-swing/src/main/resources/views/select-quiz/select-quiz_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/select-quiz/select-quiz_en_US.properties
@@ -3,6 +3,7 @@ select.quiz.cancel.tooltip = Close
 select.quiz.delete = Delete quiz
 select.quiz.edit = Edit quiz
 select.quiz.question = Question
+select.quiz.document = Document
 select.quiz.type = Quiz type
 select.quiz.create = Create quiz
 select.quiz.start = Start quiz
