fix: add distinct vector rendering states for audio/video processing

--- a/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
@@ -20,9 +20,10 @@ import.recording = Aufzeichnung wird importiert
 import.recording.success = Aufzeichnung wurde erfolgreich importiert
 import.recording.error = Aufzeichnung konnte nicht importiert werden
 recording.playback.error = Bei der Wiedergabe der Aufzeichnung ist ein Fehler aufgetreten
-recording.render.audio = Audio Rendering
-recording.render.video = Video Rendering
-recording.render.vector = Vector Rendering
+recording.render.audio = Audio-Rendering
+recording.render.video = Video-Rendering
+recording.render.vector.audio = Audio-Rendering (Vektorformat)
+recording.render.vector.video = Video-Rendering (Vektorformat)
 recording.render.video.pass = Video Rendering Pass {0}
 recording.render.canceled = Das Rendern der Aufzeichnung wurde abgebrochen
 recording.render.error = Die Aufzeichnung konnte nicht gerendert werden
