--- a/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
@@ -22,7 +22,8 @@ import.recording.error = Recording could not be imported
 recording.playback.error = An error occurred while playing back the recording
 recording.render.audio = Audio Rendering
 recording.render.video = Video Rendering
-recording.render.vector = Vector Rendering
+recording.render.vector.audio = Audio Rendering (Vector Format)
+recording.render.vector.video = Video Rendering (Vector Format)
 recording.render.video.pass = Video Rendering Pass {0}
 recording.render.canceled = Rendering of the recording has been canceled
 recording.render.error = Recording could not be rendered
